Update labels and menubar

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -84,7 +84,8 @@ label > selection {
   color: #FFFFFF;
   background-color: #000080; }
   label > selection:focus-within {
-    color: #000080; }
+    color: #FFFFFF;
+    background-color: #000080; }
 
 label:disabled {
   color: #606060; }
@@ -586,7 +587,7 @@ searchbar {
   border-width: 0 0 1px 0;
   border-style: solid;
   border-color: #000000;
-  background-color: #C0C0C0; }
+  background-color: #b6b6b6; }
 
 .nautilus-window .searchbar-container {
   margin-top: -1px; }
@@ -960,21 +961,20 @@ menubar, .menubar {
   menubar:backdrop, .menubar:backdrop {
     color: #000000;
     background-color: #C0C0C0; }
-
-menubar > menuitem, .menubar > menuitem {
-  padding: 3px 5px;
-  border: none;
-  color: #000000;
-  background-color: transparent; }
-  menubar > menuitem:hover, .menubar > menuitem:hover {
-    color: #FFFFFF;
-    background-color: #000080; }
-  menubar > menuitem:disabled, .menubar > menuitem:disabled {
-    color: #606060;
-    background-color: transparent; }
-  menubar > menuitem:backdrop, .menubar > menuitem:backdrop {
+  menubar > menuitem, .menubar > menuitem {
+    padding: 3px 5px;
+    border: none;
     color: #000000;
     background-color: transparent; }
+    menubar > menuitem:hover, .menubar > menuitem:hover {
+      color: #FFFFFF;
+      background-color: #000080; }
+    menubar > menuitem:disabled, .menubar > menuitem:disabled {
+      color: #606060;
+      background-color: transparent; }
+    menubar > menuitem:backdrop, .menubar > menuitem:backdrop {
+      color: #000000;
+      background-color: transparent; }
 
 notebook {
   padding: 0; }
@@ -1514,8 +1514,7 @@ window.dialog.print drawing {
 window.dialog.print .dialog-action-box {
   margin: 12px; }
 
-frame,
-.frame {
+frame, .frame {
   border: 1px solid #000000; }
 
 frame {
