--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -48,10 +48,8 @@ textview {
     textview text:backdrop {
       background-color: #FFFFFF; }
 
-iconview:selected, iconview:selected:focus, iconview text:selected, iconview text selection, iconview text:selected:focus, iconview text selection:focus {
-  border-width: 1px;
-  border-style: solid;
-  border-color: #000080;
+iconview:selected, iconview:selected:focus, iconview text:selected, iconview text:selected:focus, iconview text selection, iconview text selection:focus {
+  border: 1px solid #000080;
   color: #FFFFFF;
   background-color: #000080; }
 
@@ -59,11 +57,16 @@ iconview:selected:backdrop, iconview selection:backdrop, iconview text:selected:
   color: #FFFFFF;
   background-color: #000080; }
 
-rubberband, flowbox rubberband, treeview.view rubberband, .content-view rubberband, .rubberband, view rubberband, .view.rubberband, .rubberband {
-  border-width: 1px;
-  border-style: solid;
-  border-color: #000080;
-  background: none;
+rubberband {
+  border: 1px solid #06066d;
+  background-color: rgba(0, 0, 128, 0.3); }
+
+rubberband {
+  border: 1px solid #06066d;
+  background-color: rgba(0, 0, 128, 0.3); }
+
+flowbox > rubberband {
+  border: 1px solid #06066d;
   background-color: rgba(0, 0, 128, 0.3); }
 
 flowbox > flowboxchild {
@@ -106,41 +109,82 @@ label.error {
   text-shadow: none; }
 
 button {
-  transition: border 100ms ease-in-out; }
+  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+  button:backdrop {
+    transition: 200ms ease-out; }
+  button.flat {
+    transition: none; }
+    button.flat:hover, button.flat:checked {
+      transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
 
 entry {
-  transition: border 100ms ease-out; }
+  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
   entry:focus {
-    transition: border 100ms ease-in; }
+    transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
 
-notebook tab label, notebook .prelight-page, notebook .prelight-page label, notebook .active-page, notebook .active-page label {
-  transition: all 200ms ease-in; }
+flowbox > flowboxchild {
+  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
 
-scale, progressbar {
+gridview > child {
+  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+
+searchbar > revealer > box:backdrop {
   transition: 200ms ease-out; }
-  scale:backdrop, progressbar:backdrop {
-    transition: 200ms ease-out; }
 
-scale slider, switch slider {
-  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition-property: background, border, box-shadow; }
-  scale slider:backdrop, switch slider:backdrop {
-    transition: 200ms ease-out; }
-
-scale:backdrop slider, switch:backdrop slider {
+headerbar:backdrop {
   transition: 200ms ease-out; }
+
+treeview > header > button, treeview > header > button:hover, treeview > header > button:active {
+  transition: none; }
+
+treeview > header > button button.dnd:active, treeview > header > button button.dnd:selected, treeview > header > button button.dnd:hover, treeview > header > button button.dnd, treeview > header > button header.button.dnd:active, treeview > header > button header.button.dnd:selected, treeview > header > button header.button.dnd:hover, treeview > header > button header.button.dnd {
+  transition: none; }
+
+popover.menu box.inline-buttons button.image-button.model {
+  transition: none; }
+
+notebook > header > tabs > tab {
+  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
 
 scrollbar {
   transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
   scrollbar:backdrop {
     transition: 200ms ease-out; }
-  scrollbar slider {
-    transition: 200ms ease-out; }
+  scrollbar > range > trough > slider {
+    transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+  scrollbar > range.fine-tune > trough > slider {
+    transition: none; }
 
-decoration {
+switch {
+  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+  switch > slider {
+    transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+
+.view.content-view.check:not(list),
+.content-view .tile check:not(list) {
+  transition: 200ms; }
+
+checkbutton {
+  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+
+scale > through {
+  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+  scale > through > slider {
+    transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition-property: background, border, box-shadow; }
+
+placesview .server-list-button > image,
+placesview .server-list-button:checked > image {
+  transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+
+colorswatch {
+  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+
+plane {
+  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+
+window.csd:backdrop {
   transition: 200ms ease-out; }
-  decoration:backdrop {
-    transition: 200ms ease-out; }
 
 window.assistant .sidebar {
   padding: 4px;
@@ -875,20 +919,36 @@ popover:backdrop {
 magnifier {
   background-color: #FFFFFF; }
 
-modelbutton.flat, menuitem.button.flat, .menuitem.button.flat {
-  padding: 2px 8px;
+modelbutton.flat {
+  min-height: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
   border: none;
-  color: #000000;
-  background-color: transparent; }
-  modelbutton.flat:hover, modelbutton.flat:selected, modelbutton.flat:active:hover, menuitem.button.flat:hover, menuitem.button.flat:selected, menuitem.button.flat:active:hover, .menuitem.button.flat:hover, .menuitem.button.flat:selected, .menuitem.button.flat:active:hover {
+  border-radius: 0px;
+  background-color: transparent;
+  background-image: none;
+  box-shadow: none; }
+  modelbutton.flat:hover {
     color: #FFFFFF;
     background-color: #000080; }
-  modelbutton.flat > image, menuitem.button.flat > image, .menuitem.button.flat > image {
+  modelbutton.flat:selected {
+    color: #FFFFFF;
+    background-color: #000080; }
+  modelbutton.flat:disabled {
+    color: #606060; }
+  modelbutton.flat > image {
     padding-right: 4px; }
-  modelbutton.flat arrow.left, menuitem.button.flat arrow.left, .menuitem.button.flat arrow.left {
-    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic"); }
-  modelbutton.flat arrow.right, menuitem.button.flat arrow.right, .menuitem.button.flat arrow.right {
-    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic"); }
+  modelbutton.flat arrow {
+    background: none;
+    min-width: 16px;
+    min-height: 16px;
+    opacity: 0.3; }
+    modelbutton.flat arrow:hover {
+      background: none; }
+    modelbutton.flat arrow.left {
+      -gtk-icon-source: -gtk-icontheme("go-previous-symbolic"); }
+    modelbutton.flat arrow.right {
+      -gtk-icon-source: -gtk-icontheme("go-next-symbolic"); }
 
 menu, .menu {
   margin: 4px;
@@ -2040,7 +2100,8 @@ button.color {
     .content-view .tile:disabled {
       background-color: #b6b6b6; }
   .content-view > rubberband {
-    /*@extend rubberband;*/ }
+    border: 1px solid #06066d;
+    background-color: rgba(0, 0, 128, 0.3); }
 
 .scale-popup {
   /* SAMPLE
