--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -1664,26 +1664,19 @@ separator {
   combobox separator {
     border: none; }
 
-list {
-  color: #000000;
-  background-color: #FFFFFF; }
-  list:backdrop {
-    color: #000000;
-    background-color: #FFFFFF; }
-  list row {
-    padding: 2px; }
-    list row:backdrop {
-      color: #000000; }
-    list row:selected, list row:selected:hover, list row:selected:focus {
-      border: none;
-      color: #FFFFFF;
-      background-color: #000080; }
-    list row:selected:disabled {
-      color: rgba(255, 255, 255, 0.7);
-      background-color: rgba(0, 0, 128, 0.9); }
-    list row:selected:backdrop {
-      color: #FFFFFF;
-      background-color: #000080; }
+listview row:backdrop {
+  color: #000000; }
+
+listview row:selected {
+  border: none;
+  color: #FFFFFF;
+  background-color: #000080; }
+  listview row:selected:disabled {
+    color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(0, 0, 128, 0.9); }
+  listview row:selected:backdrop {
+    color: #FFFFFF;
+    background-color: #000080; }
 
 columnview > listview > row {
   padding: 0; }
@@ -1823,96 +1816,43 @@ messagedialog {
       border-bottom-left-radius: 0px;
       border-bottom-right-radius: 0px; }
 
-filechooser.csd.background, filechooser placessidebar list, .nautilus-window.csd.background, .nautilus-window placessidebar list, .nemo-window.csd.background, .nemo-window placessidebar list {
+.sidebar {
   background-color: #FFFFFF; }
-
-filechooser .sidebar, .nautilus-window .sidebar, .nemo-window .sidebar {
-  background-color: #FFFFFF; }
-  filechooser .sidebar .view:not(:selected), filechooser .sidebar iconview, .nautilus-window .sidebar .view:not(:selected), .nautilus-window .sidebar iconview, .nemo-window .sidebar .view:not(:selected), .nemo-window .sidebar iconview {
-    border: none;
-    color: #000000;
+  .sidebar:not(separator):dir(ltr), .sidebar.left:not(separator), .sidebar.left:not(separator):dir(rtl) {
+    border-right: 1px solid #000000;
+    border-left-style: none; }
+  .sidebar:not(separator):dir(rtl), .sidebar.right:not(separator) {
+    border-left: 1px solid #000000;
+    border-right-style: none; }
+  .sidebar listview.view,
+  .sidebar list {
     background-color: transparent; }
-  filechooser .sidebar frame > border, filechooser .sidebar .frame, .nautilus-window .sidebar frame > border, .nautilus-window .sidebar .frame, .nemo-window .sidebar frame > border, .nemo-window .sidebar .frame {
-    border: none; }
-  filechooser .sidebar row:not(:selected), filechooser .sidebar view row:not(:selected), filechooser .sidebar row.sidebar-row:not(:selected), .nautilus-window .sidebar row:not(:selected), .nautilus-window .sidebar view row:not(:selected), .nautilus-window .sidebar row.sidebar-row:not(:selected), .nemo-window .sidebar row:not(:selected), .nemo-window .sidebar view row:not(:selected), .nemo-window .sidebar row.sidebar-row:not(:selected) {
-    color: #000000; }
-  filechooser .sidebar .expander, .nautilus-window .sidebar .expander, .nemo-window .sidebar .expander {
-    color: #000000; }
-    filechooser .sidebar .expander:hover, .nautilus-window .sidebar .expander:hover, .nemo-window .sidebar .expander:hover {
-      color: #000080; }
+  paned .sidebar.left, paned .sidebar.right, paned .sidebar.left:dir(rtl), paned .sidebar:dir(rtl), paned .sidebar:dir(ltr), paned .sidebar {
+    border-style: none; }
 
-.caja-navigation-window .caja-side-pane {
-  background-color: #FFFFFF; }
-  .caja-navigation-window .caja-side-pane .view:not(:selected), .caja-navigation-window .caja-side-pane iconview {
-    border: none;
-    color: #000000;
-    background-color: transparent; }
-  .caja-navigation-window .caja-side-pane frame > border, .caja-navigation-window .caja-side-pane .frame {
-    border: none; }
-  .caja-navigation-window .caja-side-pane row:not(:selected), .caja-navigation-window .caja-side-pane view row:not(:selected), .caja-navigation-window .caja-side-pane row.sidebar-row:not(:selected) {
-    color: #000000; }
-  .caja-navigation-window .caja-side-pane .expander {
-    color: #000000; }
-    .caja-navigation-window .caja-side-pane .expander:hover {
-      color: #000080; }
-
-stacksidebar.sidebar:dir(ltr) list, stacksidebar.sidebar.left list, stacksidebar.sidebar.left:dir(rtl) list {
-  border-right: 1px solid #000000;
-  border-left-style: none; }
-
-stacksidebar.sidebar:dir(rtl) list, stacksidebar.sidebar.right list {
-  border-left: 1px solid #000000;
-  border-right-style: none; }
+stacksidebar list.separators:not(.horizontal) > row:not(.separator) {
+  border-bottom: none; }
 
 stacksidebar row {
-  padding: 10px 4px; }
+  padding: 10px 4px;
+  color: #000000; }
   stacksidebar row > label {
     padding-left: 6px;
     padding-right: 6px; }
   stacksidebar row.needs-attention > label {
     background-size: 6px 6px, 0 0; }
+  stacksidebar row:selected {
+    color: #FFFFFF;
+    background-color: #000080;
+    border-radius: 0px; }
+  stacksidebar row:selected:hover:dir(ltr), stacksidebar row:selected:hover:dir(rtl) {
+    color: #FFFFFF;
+    background-color: #00008d; }
+  stacksidebar row.activatable:active, stacksidebar row.activatable:selected:active {
+    box-shadow: none; }
 
-placessidebar > viewport.frame {
-  border-style: none; }
-
-placessidebar row {
-  min-height: 36px;
-  padding: 0px; }
-  placessidebar row > revealer {
-    padding: 0 14px; }
-  placessidebar row image.sidebar-icon {
-    opacity: 1; }
-    placessidebar row image.sidebar-icon:dir(ltr) {
-      padding-right: 8px; }
-    placessidebar row image.sidebar-icon:dir(rtl) {
-      padding-left: 8px; }
-  placessidebar row label.sidebar-label:dir(ltr) {
-    padding-right: 2px; }
-  placessidebar row label.sidebar-label:dir(rtl) {
-    padding-left: 2px; }
-  placessidebar row.sidebar-new-bookmark-row {
-    color: #000080; }
-  placessidebar row:drop(active):not(:disabled) {
-    color: #000080;
-    box-shadow: inset 0 1px #000080, inset 0 -1px #000080; }
-    placessidebar row:drop(active):not(:disabled):selected {
-      color: #FFFFFF;
-      background-color: #000080; }
-
-button.sidebar-button, button.sidebar-button:backdrop {
-  min-width: 22px;
-  min-height: 22px;
-  margin-top: 2px;
-  margin-bottom: 2px;
-  padding: 0;
-  border-radius: 100%;
-  color: #000000; }
-
-button.sidebar-button:hover, button.sidebar-button:active {
-  color: #000000; }
-
-button.sidebar-button:not(:hover):not(:active) > image {
-  opacity: 0.5; }
+separator.sidebar {
+  background-color: #000000; }
 
 paned > separator {
   min-width: 1px;
@@ -1966,8 +1906,9 @@ video {
     border-radius: 32px; }
 
 tooltip.background {
-  border: 1px solid #000000;
+  border: 1px solid #fafa98;
   border-radius: 0px;
+  color: #000000;
   background-color: #FFFFBF;
   padding: 4px;
   box-shadow: none; }
