--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -1788,38 +1788,34 @@ calendar {
     color: #000000;
     border-color: #000000; }
 
-messagedialog {
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px; }
-  messagedialog .background.csd {
-    border-radius: 0px;
-    color: #000000;
-    background-color: #C0C0C0; }
-  messagedialog decoration {
-    border-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); }
-  messagedialog .titlebar.horizontal {
-    border: none;
+window.dialog.message {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); }
+  window.dialog.message .titlebar {
+    min-height: 20px;
     background-image: none;
-    background-color: #C0C0C0; }
-  messagedialog.csd .dialog-action-area button {
-    padding: 10px;
-    border-radius: 0;
+    background-color: #C0C0C0;
+    border-style: none;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px; }
+  window.dialog.message box.dialog-vbox.vertical {
+    border-spacing: 10px; }
+  window.dialog.message label.title {
+    font-weight: 800;
+    font-size: 15pt; }
+  window.dialog.message.csd.background {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px; }
+  window.dialog.message.csd .dialog-action-area button {
+    padding: 10px 14px;
+    border-radius: 0px;
+    border-left-style: solid;
+    border-right-style: none;
     border-bottom-style: none;
     background-image: none; }
-    messagedialog.csd .dialog-action-area button:last-child {
-      border-right-width: 0;
-      border-radius: 0px;
-      border-bottom-right-radius: 0px; }
-    messagedialog.csd .dialog-action-area button:first-child {
-      border-left-width: 0;
-      border-radius: 0px;
+    window.dialog.message.csd .dialog-action-area button:first-child {
+      border-left-style: none;
       border-bottom-left-radius: 0px; }
-    messagedialog.csd .dialog-action-area button:only-child {
-      border-radius: 0px;
-      border-bottom-left-radius: 0px;
+    window.dialog.message.csd .dialog-action-area button:last-child {
       border-bottom-right-radius: 0px; }
 
 .sidebar {
