--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -1460,19 +1460,9 @@ scale {
       margin-right: -12px; }
 
 progressbar {
-  padding: 0;
-  border: none;
-  color: gray;
-  background-color: transparent; }
-  progressbar progress {
-    border: none;
-    border-radius: 0px;
-    background-image: linear-gradient(to right, transparent, transparent 37.5%, #C0C0C0 37.5%, #C0C0C0 50%, transparent 50%, transparent 87.5%, #C0C0C0 87.5%, #C0C0C0 100%), image(#000080);
-    background-size: 20px 16px, auto; }
-  progressbar.vertical progress {
-    background-image: linear-gradient(to bottom, transparent, transparent 37.5%, #C0C0C0 37.5%, #C0C0C0 50%, transparent 50%, transparent 87.5%, #C0C0C0 87.5%, #C0C0C0 100%), image(#000080);
-    background-size: 16px 20px, auto; }
-  progressbar trough {
+  font-size: smaller;
+  color: gray; }
+  progressbar > trough {
     padding: 2px;
     border: 1px solid #000000;
     border-radius: 0px;
@@ -1480,34 +1470,22 @@ progressbar {
     border-bottom-color: #ececec;
     border-right-color: #ececec;
     box-shadow: inset 1px 0 #7d7d7d, inset 0 1px #7d7d7d, inset -1px 0 #ececec, inset 0 -1px #ececec; }
-  progressbar.horizontal trough, progressbar.horizontal progress {
+  progressbar > trough > progress {
+    border: none;
+    border-radius: 0px;
+    background-image: linear-gradient(to right, transparent, transparent 37.5%, #C0C0C0 37.5%, #C0C0C0 50%, transparent 50%, transparent 87.5%, #C0C0C0 87.5%, #C0C0C0 100%), image(#000080);
+    background-size: 20px 16px, auto; }
+  progressbar.vertical > trough > progress {
+    background-image: linear-gradient(to bottom, transparent, transparent 37.5%, #C0C0C0 37.5%, #C0C0C0 50%, transparent 50%, transparent 87.5%, #C0C0C0 87.5%, #C0C0C0 100%), image(#000080);
+    background-size: 16px 20px, auto; }
+  progressbar.horizontal > trough {
+    min-width: 150px; }
+  progressbar.vertical > trough {
+    min-height: 80px; }
+  progressbar.horizontal > trough, progressbar.horizontal > trough > progress {
     min-height: 18px; }
-  progressbar.vertical trough, progressbar.vertical progress {
+  progressbar.vertical > trough, progressbar.vertical > trough > progress {
     min-width: 18px; }
-
-treeview.view.progressbar, treeview.view.progressbar:disabled {
-  color: #FFFFFF;
-  border-radius: 0;
-  background-color: #000080; }
-
-treeview.view.progressbar:focus, treeview.view.progressbar:selected:focus, treeview.view.progressbar:focus:selected, treeview.view.progressbar:focus:selected:focus, treeview.view.progressbar:disabled:selected {
-  border-radius: 0;
-  color: #000080;
-  background-color: #FFFFFF; }
-
-treeview.view.trough {
-  color: #000000;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 0;
-  border: none; }
-  treeview.view.trough:selected, treeview.view.trough:selected:focus {
-    color: #FFFFFF;
-    background-color: rgba(0, 0, 0, 0.1);
-    border-radius: 0;
-    border: none; }
-
-infobar treeview.view trough, row:selected treeview.view trough {
-  background-color: rgba(0, 0, 0, 0.1); }
 
 levelbar trough {
   padding: 1px;
