--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -451,18 +451,14 @@ editablelabel > stack > text > selection {
 
 button {
   padding: 4px 8px;
-  border-style: solid;
-  border-width: 1px;
   border-radius: 0px;
-  color: #000000;
-  border-color: #000000;
+  border: 1px solid #000000;
   border-top-color: #ececec;
   border-left-color: #ececec;
+  color: #000000;
   background-color: #C0C0C0;
-  box-shadow: inset -1px 0 #7d7d7d, inset 0 -1px #7d7d7d, inset 1px 0 #ececec, inset 0 1px #ececec;
-  outline-color: #000000;
-  outline-offset: 0;
-  outline-style: solid; }
+  background-image: none;
+  box-shadow: inset -1px 0 #7d7d7d, inset 0 -1px #7d7d7d, inset 1px 0 #ececec, inset 0 1px #ececec; }
   button:active, button:checked {
     color: #000000;
     border-color: #000000;
@@ -479,8 +475,9 @@ button {
     border-color: transparent;
     border-radius: 0px;
     color: #000000;
-    box-shadow: none;
-    background-color: transparent; }
+    background-color: transparent;
+    background-image: none;
+    box-shadow: none; }
     button.flat:hover {
       color: #000000;
       border-color: #000000;
@@ -500,10 +497,8 @@ button {
       background-color: transparent; }
 
 button.destructive-action {
-  border-width: 1px;
-  border-style: solid;
-  border-color: #a30000;
   border-radius: 0px;
+  border: 1px solid #a30000;
   color: #fae6e6;
   background-color: #CC0000; }
   button.destructive-action:hover {
@@ -654,8 +649,9 @@ toolbar {
     border-color: transparent;
     border-radius: 0px;
     color: #000000;
-    box-shadow: none;
-    background-color: transparent; }
+    background-color: transparent;
+    background-image: none;
+    box-shadow: none; }
     toolbar button.flat:hover {
       color: #000000;
       border-color: #000000;
