--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -1028,26 +1028,27 @@ menu, .menu {
       menu menuitem accelerator:disabled, .menu menuitem accelerator:disabled {
         color: #606060; }
 
-menubar, .menubar {
-  padding: 0;
+menubar {
+  padding: 0px;
   border-style: none;
-  background-color: #C0C0C0;
-  color: #000000; }
-  menubar:backdrop, .menubar:backdrop {
+  color: #000000;
+  background-color: #C0C0C0; }
+  menubar:backdrop {
     color: #000000;
     background-color: #C0C0C0; }
-  menubar > menuitem, .menubar > menuitem {
+  menubar > item {
     padding: 3px 5px;
+    min-height: 12px;
     border: none;
     color: #000000;
     background-color: transparent; }
-    menubar > menuitem:hover, .menubar > menuitem:hover {
+    menubar > item:selected {
       color: #FFFFFF;
       background-color: #000080; }
-    menubar > menuitem:disabled, .menubar > menuitem:disabled {
+    menubar > item:disabled {
       color: #606060;
       background-color: transparent; }
-    menubar > menuitem:backdrop, .menubar > menuitem:backdrop {
+    menubar > item:backdrop {
       color: #000000;
       background-color: transparent; }
 
@@ -1267,7 +1268,11 @@ checkbutton.text-button, radiobutton.text-button {
 check, radio {
   margin: 4px;
   min-height: 16px;
-  min-width: 16px; }
+  min-width: 16px;
+  border: none;
+  background-color: transparent;
+  background-image: none;
+  box-shadow: none; }
 
 check, popover.menu check, modelbutton.flat check {
   -gtk-icon-source: -gtk-scaled(url("assets/checkbox-unchecked.png"), url("assets/checkbox-unchecked@2.png")); }
