--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -397,19 +397,16 @@ spinner {
 
 entry {
   padding: 5px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #000000;
   border-radius: 0px;
-  color: #000000;
-  caret-color: currentColor;
-  background-color: #FFFFFF;
+  border: 1px solid #000000;
   border-bottom-color: #ececec;
   border-right-color: #ececec;
-  box-shadow: inset 1px 0 #7d7d7d, inset 0 1px #7d7d7d, inset -1px 0 #ececec, inset 0 -1px #ececec; }
-  entry:selected, entry:selected:focus, entry selection, entry selection:focus {
-    color: #FFFFFF;
-    background-color: #000080; }
+  color: #000000;
+  background-color: #FFFFFF;
+  box-shadow: inset 1px 0 #7d7d7d, inset 0 1px #7d7d7d, inset -1px 0 #ececec, inset 0 -1px #ececec;
+  caret-color: currentColor; }
+  entry:focus-within > placeholder {
+    opacity: 0; }
   entry:disabled {
     color: #606060;
     background-color: #cccccc; }
@@ -419,28 +416,60 @@ entry {
   entry:backdrop {
     color: #000000;
     background-color: #FFFFFF; }
-  entry > image.left {
-    padding-right: 5px; }
-  entry > image.right {
-    padding-left: 5px; }
-  entry progress {
-    margin: -4px -4px;
-    border-width: 0 0 2px;
-    border-radius: 0;
-    border-style: solid;
-    border-color: #000080;
-    background-color: transparent; }
   entry.flat, entry.flat:focus {
-    min-height: 0;
+    min-height: 0px;
     padding: 3px;
-    border-radius: 0;
+    border-radius: 0px;
     box-shadow: none;
     background-image: none;
     border-color: transparent; }
+  entry > text > selection {
+    background-color: #000080;
+    color: #FFFFFF; }
+    entry > text > selection:focus-within {
+      background-color: #000080;
+      color: #FFFFFF; }
+  entry > image {
+    color: #333333; }
+    entry > image.left {
+      padding-right: 5px; }
+    entry > image.right {
+      padding-left: 5px; }
+    entry > image:hover {
+      color: #000000; }
+    entry > image:active {
+      color: #000080; }
+  entry.password image.caps-lock-indicator {
+    color: #333333; }
+  entry > progress {
+    margin-bottom: 2px;
+    border-color: transparent; }
+  entry progress > trough > progress {
+    border-radius: 0;
+    border-width: 0 0 2px;
+    border-style: solid;
+    border-color: #000080;
+    background-color: transparent;
+    background-image: none;
+    box-shadow: none;
+    margin-left: 2px;
+    margin-right: 2px; }
   entry.search {
-    border-radius: 0px; }
-  entry entry {
-    box-shadow: none; }
+    border-radius: 40px; }
+  entry:drop(active), entry:drop(active):focus-within {
+    border-color: #000080;
+    box-shadow: inset 0 0 0 1px #000080; }
+
+treeview entry:focus-within:dir(rtl), treeview entry:focus-within:dir(ltr) {
+  background-color: #FFFFFF;
+  transition-property: color, background; }
+
+treeview entry.flat, treeview entry {
+  border-radius: 0;
+  background-image: none;
+  background-color: #FFFFFF; }
+  treeview entry.flat:focus-within, treeview entry:focus-within {
+    border-color: #000080; }
 
 editablelabel > stack > text > selection {
   color: transparent;
