Update menus, popovers and dialogs

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -546,39 +546,6 @@ button.suggested-action {
   button.suggested-action:active {
     box-shadow: 0 0 0 1px #000000, inset 1px 0 #7d7d7d, inset 0 1px #7d7d7d, inset -1px 0 #ececec, inset 0 -1px #ececec; }
 
-modelbutton {
-  min-height: 20px;
-  padding-left: 5px;
-  padding-right: 5px;
-  border: none;
-  border-radius: 0px;
-  background-color: transparent;
-  background-image: none;
-  box-shadow: none; }
-  modelbutton:hover {
-    color: #FFFFFF;
-    background-color: #000080; }
-  modelbutton:selected {
-    color: #FFFFFF;
-    background-color: #000080; }
-  modelbutton:disabled {
-    color: #606060; }
-  modelbutton > image {
-    padding-right: 4px; }
-  modelbutton arrow {
-    background: none;
-    min-width: 16px;
-    min-height: 16px;
-    opacity: 0.3; }
-    modelbutton arrow:hover {
-      background: none; }
-    modelbutton arrow:disabled {
-      opacity: 0.15; }
-    modelbutton arrow.left {
-      -gtk-icon-source: -gtk-icontheme("go-previous-symbolic"); }
-    modelbutton arrow.right {
-      -gtk-icon-source: -gtk-icontheme("go-next-symbolic"); }
-
 button.link,
 link {
   color: #1D72E9;
@@ -996,7 +963,7 @@ columnview.view > header > button, treeview.view > header > button, columnview.v
   columnview.view > header > button:last-child, treeview.view > header > button:last-child {
     border-right-style: none; }
 
-popover.background {
+popover.background, popover.background:backdrop {
   font: initial;
   background-color: transparent; }
 
@@ -1006,10 +973,9 @@ popover > contents {
   color: #000000;
   background-color: #C0C0C0;
   background-clip: padding-box;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.7); }
+  box-shadow: none; }
 
 popover > contents {
-  padding: 8px;
   border-radius: 0px; }
   popover > contents > list,
   popover > contents > .view,
@@ -1024,39 +990,54 @@ popover > contents {
 magnifier {
   background-color: #FFFFFF; }
 
-popover.menu menu, popover.menu .menu {
-  margin: 4px;
-  padding: 4px 4px;
+popover.menu > contents {
+  min-width: 120px;
+  padding: 4px; }
+
+popover.menu box.inline-buttons {
+  padding: 0px 4px; }
+
+popover.menu modelbutton {
+  min-height: 20px;
+  padding-left: 4px;
+  padding-right: 4px;
+  border: none;
   border-radius: 0px;
-  border: 1px solid #000000;
-  border-top-color: #ececec;
-  border-left-color: #ececec;
-  color: #000000;
-  background-color: #C0C0C0;
-  box-shadow: inset -1px 0 #7d7d7d, inset 0 -1px #7d7d7d, inset 1px 0 #ececec, inset 0 1px #ececec; }
-  popover.menu menu menuitem, popover.menu .menu menuitem {
+  background-color: transparent;
+  background-image: none;
+  box-shadow: none; }
+  popover.menu modelbutton:hover, popover.menu modelbutton:selected {
+    color: #FFFFFF;
+    background-color: #000080; }
+  popover.menu modelbutton:disabled {
+    color: #606060; }
+  popover.menu modelbutton > image {
+    padding-right: 4px; }
+  popover.menu modelbutton arrow {
+    background: none;
+    min-width: 16px;
     min-height: 16px;
-    min-width: 40px;
-    padding: 4px;
-    border: none;
-    border-radius: 0;
-    color: #000000;
-    background-color: #C0C0C0; }
-    popover.menu menu menuitem:hover, popover.menu .menu menuitem:hover {
-      color: #FFFFFF;
-      background-color: #000080; }
-      popover.menu menu menuitem:hover switch slider, popover.menu menu menuitem:hover scale highlight, popover.menu menu menuitem:hover scale slider, popover.menu .menu menuitem:hover switch slider, popover.menu .menu menuitem:hover scale highlight, popover.menu .menu menuitem:hover scale slider {
-        background-color: #FFFFFF; }
-      popover.menu menu menuitem:hover scale trough, popover.menu menu menuitem:hover switch, popover.menu .menu menuitem:hover scale trough, popover.menu .menu menuitem:hover switch {
-        background-color: rgba(255, 255, 255, 0.75); }
-    popover.menu menu menuitem:disabled, popover.menu .menu menuitem:disabled {
-      color: #606060; }
-    popover.menu menu menuitem accelerator, popover.menu .menu menuitem accelerator {
-      color: alpha(currentColor, 0.55); }
-      popover.menu menu menuitem accelerator:hover, popover.menu .menu menuitem accelerator:hover {
-        color: rgba(255, 255, 255, 0.8); }
-      popover.menu menu menuitem accelerator:disabled, popover.menu .menu menuitem accelerator:disabled {
-        color: #606060; }
+    opacity: 0.3; }
+    popover.menu modelbutton arrow:hover {
+      background: none; }
+    popover.menu modelbutton arrow:disabled {
+      opacity: 0.15; }
+    popover.menu modelbutton arrow.left {
+      -gtk-icon-source: -gtk-icontheme("go-previous-symbolic"); }
+    popover.menu modelbutton arrow.right {
+      -gtk-icon-source: -gtk-icontheme("go-next-symbolic"); }
+
+popover.menu separator {
+  margin: 6px 0; }
+
+popover.menu list separator {
+  margin: 0; }
+
+popover.menu popover.menu {
+  padding: 0 0 4px 0; }
+  popover.menu popover.menu > contents {
+    margin: 0;
+    border-radius: 0px; }
 
 popover.menu accelerator {
   color: alpha(currentColor, 0.55); }
@@ -1831,35 +1812,37 @@ calendar {
   calendar > grid > label.day-number.other-month {
     color: alpha(currentColor, 0.3); }
 
-window.dialog.message {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); }
-  window.dialog.message .titlebar {
-    min-height: 20px;
-    background-image: none;
-    background-color: #C0C0C0;
-    border-style: none;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px; }
-  window.dialog.message box.dialog-vbox.vertical {
-    border-spacing: 10px; }
-  window.dialog.message label.title {
-    font-weight: 800;
-    font-size: 15pt; }
-  window.dialog.message.csd.background {
-    border-bottom-left-radius: 0px;
+window.dialog.message .titlebar {
+  min-height: 20px;
+  background-image: none;
+  background-color: #C0C0C0;
+  border-style: none;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px; }
+
+window.dialog.message box.dialog-vbox.vertical {
+  border-spacing: 10px; }
+
+window.dialog.message label.title {
+  font-weight: 800;
+  font-size: 15pt; }
+
+window.dialog.message.csd.background {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px; }
+
+window.dialog.message.csd .dialog-action-area button {
+  padding: 10px 14px;
+  border-radius: 0px;
+  border-left-style: solid;
+  border-right-style: none;
+  border-bottom-style: none;
+  background-image: none; }
+  window.dialog.message.csd .dialog-action-area button:first-child {
+    border-left-style: none;
+    border-bottom-left-radius: 0px; }
+  window.dialog.message.csd .dialog-action-area button:last-child {
     border-bottom-right-radius: 0px; }
-  window.dialog.message.csd .dialog-action-area button {
-    padding: 10px 14px;
-    border-radius: 0px;
-    border-left-style: solid;
-    border-right-style: none;
-    border-bottom-style: none;
-    background-image: none; }
-    window.dialog.message.csd .dialog-action-area button:first-child {
-      border-left-style: none;
-      border-bottom-left-radius: 0px; }
-    window.dialog.message.csd .dialog-action-area button:last-child {
-      border-bottom-right-radius: 0px; }
 
 .sidebar {
   background-color: #FFFFFF; }
