Update menus/popovers, remove vertical margin to checkradio boxes

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -970,10 +970,11 @@ popover.background, popover.background:backdrop {
 popover > arrow,
 popover > contents {
   border: 1px solid #000000;
+  border-top-color: #ececec;
+  border-left-color: #ececec;
   color: #000000;
   background-color: #C0C0C0;
-  background-clip: padding-box;
-  box-shadow: none; }
+  box-shadow: inset -1px 0 #7d7d7d, inset 0 -1px #7d7d7d, inset 1px 0 #ececec, inset 0 1px #ececec; }
 
 popover > contents {
   border-radius: 0px; }
@@ -992,7 +993,7 @@ magnifier {
 
 popover.menu > contents {
   min-width: 120px;
-  padding: 4px; }
+  padding: 3px; }
 
 popover.menu box.inline-buttons {
   padding: 0px 4px; }
@@ -1001,8 +1002,8 @@ popover.menu modelbutton {
   min-height: 20px;
   padding-left: 4px;
   padding-right: 4px;
-  border: none;
   border-radius: 0px;
+  border: none;
   background-color: transparent;
   background-image: none;
   box-shadow: none; }
@@ -1034,7 +1035,7 @@ popover.menu list separator {
   margin: 0; }
 
 popover.menu popover.menu {
-  padding: 0 0 4px 0; }
+  padding: 0 0 3px 0; }
   popover.menu popover.menu > contents {
     margin: 0;
     border-radius: 0px; }
@@ -1063,7 +1064,8 @@ menubar {
     min-height: 12px;
     border: none;
     color: #000000;
-    background-color: transparent; }
+    background-color: transparent;
+    box-shadow: none; }
     menubar > item:selected {
       color: #FFFFFF;
       background-color: #000080; }
@@ -1290,7 +1292,7 @@ checkbutton.text-button, radiobutton.text-button {
   outline-offset: 0; }
 
 check, radio {
-  margin: 4px;
+  margin: 0 4px;
   min-height: 16px;
   min-width: 16px;
   border: none;
